--- a/src/components/styles/bookmark.scss
+++ b/src/components/styles/bookmark.scss
@@ -21,7 +21,7 @@
     span {
         position: absolute;
         bottom: -7px;
-        font-size: .7rem;
+        font-size: .6rem;
         right: 0;
     }
 }
