--- a/src/components/styles/news-feed.scss
+++ b/src/components/styles/news-feed.scss
@@ -10,6 +10,30 @@
     max-width: 1440px;
     margin: auto;
 
+    .col-xs-12 {
+        width: 100%;
+    }
+    @media (min-width: 544px) {
+        .col-sm-6 {
+            width: 50%;
+        }
+    }
+    @media (min-width: 768px) {
+        .col-md-6 {
+            width: 50%;
+        }
+    }
+    @media (min-width: 992px) {
+        .col-lg-4 {
+            width: 33.33333%;
+        }
+    }
+    @media (min-width: 1200px) {   
+        .col-xl-4 {
+            width: 33.33333%;
+        }
+    }
+
     .errors-container {
         width: 340px;
         margin: 2rem auto;
