--- a/src/components/styles/tier-icon.scss
+++ b/src/components/styles/tier-icon.scss
@@ -2,8 +2,9 @@
 
 .tier-icon {
     padding: 0 5px;
+    padding-top: 1px;
     border: 1px solid transparent;
-    border-radius: 3rem;
+    border-radius: .25rem;
     margin-left: 7px;
     text-align: center;
     font-size: .7rem;
